# slowclaw.social

./: AGENTS.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.ja.md  README.md  README.ru.md  README.vi.md  README.zh-CN.md  SECURITY.md  WEB_UI_AUDIT.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: ci-run.yml
dev/: README.md  cli.sh  config.template.toml
docs/: commands-reference.md  config-reference.md  pr-workflow.md  providers-reference.md  reviewer-playbook.md  vision-contract.md
docs/contributing/: README.md
docs/vi/: config-reference.md  pr-workflow.md  vision-contract.md
pb_migrations/: 1772034734_created_drafts.js  1772034734_created_post_history.js  1772419200_created_chat_messages.js
pocketbase/: collections.example.json
scripts/: pb-bootstrap.mjs  render_audio_insight_clip.py  transcribe_audio_journal.py  transcription_setup.py
scripts/audio_to_video_skill/: README.md  audio_to_video.py  audio_to_video2.py  slowclaw_audio_to_video_job.py
scripts/ci/: detect_change_scope.sh
skills/audio_to_video/: SKILL.md
skills/workflow_bot_creation/: SKILL.md
src/: lib.rs  main.rs  pocketbase_chat.rs  pocketbase_sidecar.rs  workflow_assets.rs
src/agent/: loop_.rs  mod.rs
src/auth/: mod.rs  openrouter_oauth.rs
src/channels/: context.rs  mod.rs  pocketbase.rs
src/feed/: mod.rs  (+1 more)
tests/: config_persistence.rs  config_schema.rs
tmp_site/: index.html
web/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
web/src-tauri/: Cargo.toml  IOS_TESTFLIGHT.md  build.rs  build_output.txt  tauri.conf.json  tauri.ios.conf.json
web/src-tauri/binaries/: README.md
web/src-tauri/capabilities/: default.json  sidecar-runtime.json
web/src-tauri/icons/: icon.icns
web/src-tauri/resources/models/: README.md
web/src-tauri/src/: content_ops.rs  lib.rs  local_workspace.rs  main.rs
(+86 files in other folders)
