[package]
name = "slowclaw_mobile"
version = "0.1.0"
description = "SlowClaw mobile companion app"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.77"

[workspace]

[lib]
name = "slowclaw_mobile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
base64 = "0.22"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
symphonia = "0.5.5"
whisper-rs = "0.15.1"
zeroclaw = { package = "slowclaw", path = "../.." }
